fixed background image in the signup page not showing up at the bottom

--- a/client/src/Containers/Signup/Signup.css
+++ b/client/src/Containers/Signup/Signup.css
@@ -1,3 +1,13 @@
+body {
+    background-image: url("https://github.com/adrianalbr/Atlanta-Fandom-Social/blob/main/client/src/assets-sort/background400.png?raw=true");
+    /* background-position: center; */
+    /* background-size: cover; */
+    background-color: rgb(171, 169, 169);
+    background-blend-mode: overlay;
+    background-repeat: repeat;
+}
+
+
 .formHeader {
     min-height: 60%;
     width: 50%;
@@ -76,11 +86,3 @@ background-image: linear-gradient(
     text-decoration: none;
 }
 
-.main {
-    background-image: url("https://github.com/adrianalbr/Atlanta-Fandom-Social/blob/main/client/src/assets-sort/background400.png?raw=true");
-    /* background-position: center; */
-    /* background-size: cover; */
-    background-color: rgb(171, 169, 169);
-    background-blend-mode: overlay;
-    background-repeat: repeat;
-}
